--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "run": "npm run dev",
-    "dev": "next dev",
+    "dev": "next dev -p 8084",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,6 +14,7 @@
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@chakra-ui/system": "^2.6.0",
+    "@chakra-ui/theme": "^3.3.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/open-sans": "^5.0.28",
@@ -22,7 +23,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "eslint-config-next": "14.2.3",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.5",
     "firebase-admin": "^12.1.1",
     "firebase-functions": "^5.0.1",
     "framer-motion": "^11.2.10",
